# odysseus-python

./: README.md  battery.py  connected-wires.py  debug.py  drifting-value.py  example.py  fuses.py  keypress.py  kick.py  lp_lights_out.py  pyproject.toml
bigbattery/: README.md  bigbattery.py  consts.py  elwire_animations.py  globals.py  helpers.py  neopixel_animations.py
odysseus/: log.py  taskbox.py
reactorconsole/: Makefile  ardubus_devices.yml  reactorconsole.sh  reactorlocal.py  requirements.txt
